feat: validate on create or change ownership for no overlaps
