# backend/src/main/java/com/mav/openzev/controller/ExceptionController.java
@@ -2,6 +2,7 @@ package com.mav.openzev.controller;
 
 import com.mav.openzev.api.model.ErrorDto;
 import com.mav.openzev.exception.NotFoundException;
+import com.mav.openzev.exception.ValidationException;
 import lombok.AccessLevel;
 import lombok.NoArgsConstructor;
 import org.springframework.http.ResponseEntity;
@@ -13,8 +14,14 @@ import org.springframework.web.bind.annotation.ExceptionHandler;
 public class ExceptionController {
 
   @ExceptionHandler(value = {NotFoundException.class})
-  static ResponseEntity<ErrorDto> handleNotFoundEx(final NotFoundException notFoundEx) {
-    return ResponseEntity.status(notFoundEx.getStatusCode())
-        .body(new ErrorDto().code(notFoundEx.getCode()).message(notFoundEx.getMessage()));
+  static ResponseEntity<ErrorDto> handleNotFoundException(final NotFoundException exception) {
+    return ResponseEntity.status(NotFoundException.getStatusCode())
+        .body(new ErrorDto().code(exception.getCode()).message(exception.getMessage()));
+  }
+
+  @ExceptionHandler(value = {ValidationException.class})
+  static ResponseEntity<ErrorDto> handleValidationException(final ValidationException exception) {
+    return ResponseEntity.status(ValidationException.getStatusCode())
+        .body(new ErrorDto().code(exception.getCode()).message(exception.getMessage()));
   }
 }
